# myo-control

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/myo-rt/: Cargo.toml
crates/myo-rt/src/: acquire.rs  decode.rs  effector.rs  features.rs  hand_web.rs  main.rs  sink.rs
data/: .gitignore  README.md
docs/superpowers/specs/: 2026-06-09-myo-rt-acquisition-spine-design.md  2026-06-23-decoder-and-virtual-hand-design.md  2026-06-24-3d-virtual-hand-design.md
python/myotrain/: pyproject.toml
python/myotrain/myotrain/: __init__.py  export_onnx.py  features.py  train.py
viewer/: hand.html  hand.js
