[package]
name = "myo-rt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Real-time myoelectric control loop (acquisition → features → effector)."

[dependencies]
arrow = "59.0.0"
clap = { version = "4.6.1", features = ["derive"] }
ndarray = "0.17.2"
parquet = "59.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.27.0"
