[project]
name = "myotrain"
version = "0.1.0"
description = "Training and offline analysis for myo-control."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myotrain"]
